--- a/src/bower.json
+++ b/src/bower.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "angular": "1.5.0",
     "angular-material": "1.0.5",
+    "fs-angular-lister": "latest",
     "angular-ui-router": "0.2.15",
     "angular-messages": "1.5.6-build.4794+sha.f1f892d"
   },
