--- a/src/package.json
+++ b/src/package.json
@@ -1,14 +1,7 @@
 {
-  "name": "fs-angular",
-  "version": "0.0.0",
-  "dependencies": {
-  },
-  "repository": {
-    "type": "git"
-  },
   "devDependencies": {
     "connect-modrewrite": "latest",
-    "grunt": "0.4.5",    
+    "grunt": "0.4.5",
     "grunt-angular-templates": "^0.5.9",
     "grunt-autoprefixer": "0.7.3",
     "grunt-concurrent": "0.5.0",
@@ -17,21 +10,27 @@
     "grunt-contrib-concat": "0.4.0",
     "grunt-contrib-connect": "0.7.1",
     "grunt-contrib-copy": "0.8.0",
+    "grunt-contrib-cssmin": "0.9.0",
+    "grunt-contrib-htmlmin": "0.3.0",
+    "grunt-contrib-imagemin": "0.9.4",
+    "grunt-contrib-jshint": "0.10.0",
     "grunt-contrib-uglify": "0.4.0",
     "grunt-contrib-watch": "0.6.1",
     "grunt-filerev": "0.2.1",
+    "grunt-google-cdn": "0.4.0",
     "grunt-newer": "0.7.0",
+    "grunt-ng-annotate": "0.3.0",
     "grunt-ng-constant": "1.1.0",
-    "grunt-ngdocs": "^0.2.9",
+    "grunt-ngdocs": "0.2.9",
+    "grunt-svgmin": "0.4.0",
+    "grunt-template": "latest",
     "grunt-usemin": "2.1.1",
     "grunt-wiredep": "1.7.0",
     "jasmine-core": "2.1.2",
     "jshint-stylish": "0.2.0",
     "load-grunt-tasks": "0.4.0",
     "run-sequence": "^1.0.1",
-    "time-grunt": "0.3.1",
-    "grunt-karma": "latest",
-    "karma": "latest"
+    "time-grunt": "0.3.1"
   },
   "engines": {
     "node": ">=0.10.0"
