--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,13 @@
 {
-  "name": "fs-angular-validate", 
+  "name": "fs-angular-validate",
   "description": "",
   "main": [
     "dist/validate.js",
     "dist/validate.css"
   ],
   "dependencies": {
-    "angular-messages": "1.5.6-build.4794+sha.f1f892d"
+    "angular-messages": "1.5.6-build.4794+sha.f1f892d",
+    "fs-angular-util": "latest"
   },
   "authors": [
     "Firestitch Inc."
