--- a/src/bower.json
+++ b/src/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "fs-angular-validate",
   "namespace": "validate",
-  "port": "5010",   
+  "port": "5010",
   "moduleName": "app",
   "version": "0.0.0",
   "appPath": "app",
@@ -9,6 +9,7 @@
     "angular": "1.5.0",
     "angular-material": "1.0.5",
     "fs-angular-lister": "latest",
+    "fs-angular-util": "latest",
     "angular-ui-router": "0.2.15",
     "angular-messages": "1.5.6-build.4794+sha.f1f892d"
   },
