--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
     "dist/validate.css"
   ],
   "dependencies": {
-    "angular-messages": "1.5.6-build.4794+sha.f1f892d",
+    "angular-messages": "^1.5",
     "fs-angular-util": "latest"
   },
   "authors": [
