--- a/src/bower.json
+++ b/src/bower.json
@@ -6,18 +6,11 @@
   "version": "0.0.0",
   "appPath": "app",
   "dependencies": {
-    "angular": "1.5.0",
-    "angular-material": "1.0.5",
+    "angular": "1.6.0",
+    "angular-material": "1.1.1",
     "fs-angular-lister": "latest",
     "fs-angular-util": "latest",
     "angular-ui-router": "0.2.15",
-    "angular-messages": "1.5.6-build.4794+sha.f1f892d"
-  },
-  "devDependencies": {
-    "angular-mocks": "1.5.0",
-    "angular-scenario": "1.5.0"
-  },
-  "resolutions": {
-    "angular": "1.5.0"
+    "angular-messages": "^1.5"
   }
 }
