--- a/src/bower.json
+++ b/src/bower.json
@@ -11,6 +11,7 @@
     "fs-angular-lister": "^1.0.0",
     "fs-angular-util": "^1.0.0",
     "fs-angular-alert": "^1.0.0",
+    "fs-angular-api": "^1.0.0",
     "angular-ui-router": "0.2.15"
   }
 }
