removed ng-messages. there was a change in ng-messages and it is better to do it ourself.

--- a/src/bower.json
+++ b/src/bower.json
@@ -14,6 +14,7 @@
     "fs-angular-api": "^1.0.0",
     "fs-angular-phone": "^1.0.0",
     "fs-angular-time": "^1.0.0",
+    "fs-angular-datetime": "^1.0.0",
     "angular-ui-router": "0.3.2",
     "fs-boilerplate-styles": "^1.0.0"
   }
